--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-redux": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.9",
     "tailwindcss": "^3.3.2"
   },
   "private": true
